--- a/ApiAggregation.Api/ApiAggregation.Api.csproj
+++ b/ApiAggregation.Api/ApiAggregation.Api.csproj
@@ -11,11 +11,17 @@
         <PackageReference Include="AutoMapper" Version="14.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.14"/>
         <PackageReference Include="Serilog" Version="4.3.0" />
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+        <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Controllers\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ApiAggregation.Model\ApiAggregation.Model.csproj" />
     </ItemGroup>
 
 </Project>
