--- a/ApiAggregation.Infrastructure/ApiAggregation.Infrastructure.csproj
+++ b/ApiAggregation.Infrastructure/ApiAggregation.Infrastructure.csproj
@@ -4,10 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>ApiAggragation.Infrastructure</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <Folder Include="Dto\" />
-    </ItemGroup>
 
 </Project>
