--- a/ApiAggregation.Infrastructure/ApiAggregation.Infrastructure.csproj
+++ b/ApiAggregation.Infrastructure/ApiAggregation.Infrastructure.csproj
@@ -7,4 +7,14 @@
         <RootNamespace>ApiAggragation.Infrastructure</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ApiAggregation.Application\ApiAggregation.Application.csproj" />
+      <ProjectReference Include="..\ApiAggregation.Model\ApiAggregation.Model.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
