--- a/ApiAggregation.Model/ApiAggregation.Model.csproj
+++ b/ApiAggregation.Model/ApiAggregation.Model.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Dto\" />
+      <Folder Include="EndpointsDto\" />
     </ItemGroup>
 
 </Project>
