--- a/ApiAggregation.Application/ApiAggregation.Application.csproj
+++ b/ApiAggregation.Application/ApiAggregation.Application.csproj
@@ -12,6 +12,11 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="14.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Helper\" />
     </ItemGroup>
 
 </Project>
