--- a/ApiAggregation.Application/ApiAggregation.Application.csproj
+++ b/ApiAggregation.Application/ApiAggregation.Application.csproj
@@ -12,11 +12,8 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="14.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Helper\" />
     </ItemGroup>
 
 </Project>
