--- a/ApiAggregation.Api/ApiAggregation.Api.csproj
+++ b/ApiAggregation.Api/ApiAggregation.Api.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="14.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.14"/>
+        <PackageReference Include="Scrutor" Version="6.0.1" />
         <PackageReference Include="Serilog" Version="4.3.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
