--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # App config
-**/appsettings.json
-**/appsettings.*.json
+#**/appsettings.json
+#**/appsettings.*.json
 
 # Ignore build outputs
 bin/
